--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		            </div>
 			    </div>
 			     <div class="container">
-			     	<img src="./images/model-min.png" class="mod" alt="model">
+			     	<img src="./images/model-min.png" class="mod" alt="model" loading="lazy">
 			     	<div class="cont-1 animation-element in-view">
 			     		<h1>shopping <span>made</span> easier</h1>
 			     	</div>
@@ -52,7 +52,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/naipolish-min.png" alt="naipolish">
+								<img src="./images/naipolish-min.png" alt="naipolish" loading="lazy">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -64,8 +64,8 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
-					 loading="lazy"				<div class="hold-2">
+									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -76,8 +76,8 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
-					 loading="lazy"				<div class="hold-2">
+									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -88,8 +88,8 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
-					 loading="lazy"				<div class="hold-2">
+									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -100,8 +100,8 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish">
-					 loading="lazy"				<div class="hold-2">
+									<img class="gandu" src="./images/naipolish-min.png" alt="naipolish" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>naipolish</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -118,7 +118,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/air-blower-min.png" alt="air blower">
+								<img src="./images/air-blower-min.png" alt="air blower" loading="lazy">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -130,8 +130,8 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
-			 loading="lazy"						<div class="hold-2">
+									<img class="gandu" src="./images/air-blower-min.png" alt="air blower" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -142,8 +142,8 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
-			 loading="lazy"						<div class="hold-2">
+									<img class="gandu" src="./images/air-blower-min.png" alt="air blower" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -154,8 +154,8 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
-			 loading="lazy"						<div class="hold-2">
+									<img class="gandu" src="./images/air-blower-min.png" alt="air blower" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -166,8 +166,8 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
-			 loading="lazy"						<div class="hold-2">
+									<img class="gandu" src="./images/air-blower-min.png" alt="air blower" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -178,8 +178,8 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="air blower">
-			 loading="lazy"						<div class="hold-2">
+									<img class="gandu" src="./images/air-blower-min.png" alt="air blower" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>hair blowers</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -195,7 +195,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/bag-min.png" alt="yellow leather handbag">
+								<img src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -272,7 +272,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/hat-min.png" alt="a stylish strawhat">
+								<img src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -284,8 +284,8 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
-		 loading="lazy"							<div class="hold-2">
+									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -296,8 +296,8 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
-		 loading="lazy"							<div class="hold-2">
+									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -308,8 +308,8 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
-		 loading="lazy"							<div class="hold-2">
+									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -320,8 +320,8 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
-		 loading="lazy"							<div class="hold-2">
+									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -332,8 +332,8 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat">
-		 loading="lazy"							<div class="hold-2">
+									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
+									<div class="hold-2">
 										<div class="up">
 										<h5>hats</h5>	
 											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
@@ -349,7 +349,7 @@
 					<div class="holder">
 						<div class="sub-holder">
 							<div class="upper">
-								<img src="./images/sandals-min.png" alt="a pair of sandals">
+								<img src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
 							</div>
 							<div class="lower">
 								<a href="#" class="butt" onclick="return false">
@@ -361,7 +361,7 @@
 							<a href="#" class="cut pause" onclick="return false">x</a>
 						    <section class="vertical-center-5 ">
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals"> loading="lazy"
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -373,7 +373,7 @@
 									</div>
 								</div>
 							    <div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals"> loading="lazy"
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -385,7 +385,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals"> loading="lazy"
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -397,7 +397,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals"> loading="lazy"
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
@@ -409,7 +409,7 @@
 									</div>
 								</div>
 								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals"> loading="lazy"
+									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
 									<div class="hold-2">
 										<div class="up">
 										<h5>sandals</h5>	
