--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		            </div>
 			    </div>
 			     <div class="container">
-			     	<img src="./images/model-min.png" class="mod" alt="model">
+			     	<img src="./images/model-min.png" class="mod" alt="model" loading="lazy">
 			     	<div class="cont-1 animation-element in-view">
 			     		<h1>shopping <span>made</span> easier</h1>
 			     	</div>
@@ -60,59 +60,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="sub-holder2">
-							<a href="#" class="cut pause" onclick="return false">x</a>
-						    <section class="vertical-center-5 ">
-								<div class="chart">
-									<img class="gandu" src="./images/nailpolish-min.png" alt="nailpolish" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>nailpolish</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-							    <div class="chart">
-									<img class="gandu" src="./images/nailpolish-min.png" alt="nailpolish" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>nailpolish</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/nailpolish-min.png" alt="nailpolish" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>nailpolish</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/nailpolish-min.png" alt="nailpolish" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>nailpolish</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-							</section>
-						</div>
+
 					</div>
 
 					<div class="holder">
@@ -126,71 +74,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="sub-holder2">
-							<a href="#" class="cut pause" onclick="return false">x</a>
-						    <section class="vertical-center-5 ">
-								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="air blower" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>hair blowers</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-							    <div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="air blower" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>hair blowers</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="air blower" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>hair blowers</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="air blower" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>hair blowers</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/air-blower-min.png" alt="air blower" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>hair blowers</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-							</section>
-						</div>
+
 					</div>
 					<div class="holder">
 						<div class="sub-holder">
@@ -203,71 +87,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="sub-holder2">
-							<a href="#" class="cut pause" onclick="return false">x</a>
-						    <section class="vertical-center-5 ">
-								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>bags</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-							    <div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>bags</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>bags</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>bags</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/bag-min.png" alt="yellow leather handbag" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>bags</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-							</section>
-						</div>
+
 					</div>
 					<div class="holder">
 						<div class="sub-holder">
@@ -280,71 +100,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="sub-holder2">
-							<a href="#" class="cut pause" onclick="return false">x</a>
-						    <section class="vertical-center-5 ">
-								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>hats</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-							    <div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>hats</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>hats</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>hats</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/hat-min.png" alt="a stylish strawhat" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>hats</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-							</section>
-						</div>
+
 					</div>
 					<div class="holder">
 						<div class="sub-holder">
@@ -357,71 +113,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="sub-holder2">
-							<a href="#" class="cut pause" onclick="return false">x</a>
-						    <section class="vertical-center-5 ">
-								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>sandals</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-							    <div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>sandals</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>sandals</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>sandals</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-								<div class="chart">
-									<img class="gandu" src="./images/sandals-min.png" alt="a pair of sandals" loading="lazy">
-									<div class="hold-2">
-										<div class="up">
-										<h5>sandals</h5>	
-											<p>It’s the end of summer the sweltering heat makes human sweat in the night and makes the plants and trees wilt even in the moonlit nights. The eastern wind breeze brings an eerie feeling, that the monsoon clouds are soon coming, there is a strange silence in the ears, the sky gets darker and darker</p>
-										</div>
-										<div class="down">
-											<a href="#"> buy now</a>
-										</div>
-									</div>
-								</div>
-							</section>
-						</div>
+
 						</div>
 					</div>
 				</section>
