--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		            </div>
 			    </div>
 			     <div class="container">
-			     	<img src="./images/model-min.png" class="mod" alt="model" loading="lazy">
+			     	<img src="./images/model-min.png" class="mod" alt="model">
 			     	<div class="cont-1 animation-element in-view">
 			     		<h1>shopping <span>made</span> easier</h1>
 			     	</div>
@@ -115,7 +115,16 @@
 
 						</div>
 						</section>
-						<div class="my">fuck</div>
+						<div class="my" id="box">
+	                         <ul class="sub-holder2">
+	                         	<li></li>
+	                         	<li></li>
+	                         	<li></li>
+	                         	<li></li>
+	                         	<li></li>
+	                         </ul>
+
+						</div>
 					</div>
 			<nav class="nav-bar">
 					<ul class="list-1 ">
